--- a/config.json
+++ b/config.json
@@ -36,6 +36,8 @@
         "title" : "Népesség kor szerinti megoszlása",
         "colors" : ["#BFC46B","#85ACCE","#914441"],
 		"dataPrecision":0,
+		"dataUnit": "fő",
+		"xAxesMax": "",
         "fieldMap" : {
 			"fiatal" : "0-17 évesek",
             "felnott" : "18-59 évesek",
@@ -55,13 +57,19 @@
 		"title" : "",
 		"colors" : [""],
 		"dataPrecision" : 1,
+		"dataUnit": "fő",
         "fieldMap" : {
             "field" : "alias"
 			}
 		},
     "bubbleSettings" : {
 		"title" : "Szomszédos települések el- és odavándorlása",
-		"dataPrecision" : 1,
+		"dataPrecision" : 0,
+		"xUnit": "fő",
+		"yUnit": "fő",
+		"zUnit": "fő",
+		"xAxesMax": 8000,
+		"yAxesMax": 9000,		
         "____comment____" : "A fieldMapnél a mezőket X, Y, Z sorrendben kell megadni!",
         "fieldMap" : {			
             "elvand" : "Elvándorlás",
@@ -88,8 +96,8 @@
 		"upperRightChartHeightPercent" : 50,
 		"legendOn" : false,
 		"____comment____" : "Ha valamelyikre a lentiekből nincs szükség, írjon üres szöveget!",
-		"logoImg" : "",
-		"title" : "",
+		"logoImg" : "logo.png",
+		"title" : "Népesség és népmozgalom",
 		"subTitle" : "",
 		"splashText" : "",
 		"infoBoxTest" : ""
@@ -99,44 +107,58 @@
     "ymin" : 5800000,
     "xmax" : 2800000,
     "ymax" : 6150000,
-	"timeStops" : [""],
-	"timeSliderMovingRate" : 1000,
-    "dataServiceURL" : "",
-	"dataServiceIndex" : 0,
-    "additionalLayerURLs" : [""],
-	"areaNameField" : "",
+	"timeStops" : ["2012","2013","2014","2015"],
+	"timeSliderMovingRate" : 2000,
+    "dataServiceURL" : "http://arcgisserver.lechnerkozpont.hu/arcgisserverwa/rest/services/homokozo/Dashboard_Lakasallomany_TestService_20170329/MapServer",
+	"dataServiceIndex" : 1,
+    "additionalLayerURLs" : ["http://arcgisserver.lechnerkozpont.hu/arcgisserverwa/rest/services/foldgomb/Foldgomb_2016_november_orszaghatar/MapServer"],
+	"areaNameField" : "nuts3name",
     "chartPositions" : {
         "LL" : "ser",
-        "UR" : "tab", 
-        "LR" : "bub" 
+        "UR" : "rad", 
+        "LR" : "pie" 
         },
     "serialSettings" : {
-        "title" : "",
-        "colors" : [""],
+        "title" : "Lakások szobaszám szerinti megoszlása",
+        "colors" : ["#BFC46B","#85ACCE","#914441","#444444"],
 		"dataPrecision":0,
+		"dataUnit": "db",
+		"xAxesMax": "",
         "fieldMap" : {
-			"field" : "alias"
+			"egyszoba" : "egy szoba",
+            "ketszoba" : "két szoba",
+            "haromszoba" : "három szoba",
+            "sokszoba" : "több, mint három szoba"
 			}
         },
     "pieSettings" : {
-		"title" : "",
-		"colors" : [""],
+		"title" : "Lakások szobaszám szerinti megoszlása",
+		"colors" : ["#BFC46B","#85ACCE","#914441", "#444444"],
+		"dataPrecision":0,
+		"dataUnit": "db",
         "fieldMap" : {
-			"field" : "alias"
+			"egyszoba" : "egy szoba",
+            "ketszoba" : "két szoba",
+            "haromszoba" : "három szoba",
+            "sokszoba" : "több, mint három szoba"
 			}
 		},
     "radarSettings" : {
-		"title" : "",
-		"colors" : [""],
+		"title" : "Közmű ellátottság",
+		"colors" : ["#334455","#999999","#ddddee","#88ccff","#777799"],
 		"dataPrecision" : 1,
+		"dataUnit": "db",
         "fieldMap" : {
-            "field" : "alias"
+            "viz" : "Víz",
+            "aram" : "Áram",
+            "gaz" : "Gáz",
+            "szenny" : "Szennyvíz",
+            "internet" : "Internet"
 			}
 		},
     "bubbleSettings" : {
 		"title" : "",
 		"dataPrecision" : 1,
-        "dataUnit" : "%",
         "fieldMap" : {
 			"field" : "alias"
 			}	
@@ -218,15 +240,14 @@
 			}	
 		}
     },
-"ben" : {
-	"layout" : {
+"ben" : {	"layout" : {
 		"leftPanelWidthPercent" : 50,
 		"mapHeightPercent" : 50,
-		"upperRightChartHeightPercent" : 50,
+		"upperRightChartHeightPercent" : 100,
 		"legendOn" : false,
 		"____comment____" : "Ha valamelyikre a lentiekből nincs szükség, írjon üres szöveget!",
-		"logoImg" : "",
-		"title" : "",
+		"logoImg" : "logo.png",
+		"title" : "Népesség és népmozgalom",
 		"subTitle" : "",
 		"splashText" : "",
 		"infoBoxTest" : ""
@@ -236,36 +257,47 @@
     "ymin" : 5800000,
     "xmax" : 2800000,
     "ymax" : 6150000,
-	"timeStops" : [""],
-	"timeSliderMovingRate" : 1000,
-    "dataServiceURL" : "",
-	"dataServiceIndex" : 0,
-    "additionalLayerURLs" : [""],
-	"areaNameField" : "",
+	"timeStops" : ["2008","2009","2010","2011","2012","2013","2014"],
+	"timeSliderMovingRate" : 2000,
+    "dataServiceURL" : "http://arcgisserver.lechnerkozpont.hu/arcgisserverwa/rest/services/homokozo/Dashboard_Benzinkutak_TestService_20170329/MapServer",
+	"dataServiceIndex" : 1,
+    "additionalLayerURLs" : ["http://arcgisserver.lechnerkozpont.hu/arcgisserverwa/rest/services/foldgomb/Foldgomb_2016_november_orszaghatar/MapServer"],
+	"areaNameField" : "jarasnev",
     "chartPositions" : {
         "LL" : "ser",
-        "UR" : "tab", 
-        "LR" : "bub" 
+        "UR" : "pie", 
+        "LR" : "" 
         },
     "serialSettings" : {
-        "title" : "",
-        "colors" : [""],
+        "title" : "Gépjárművek megoszlása típusonként",
+        "colors" : ["#BFC46B","#85ACCE","#914441","#444444"],
 		"dataPrecision":0,
+		"dataUnit": "db",
+		"xAxesMax": "",
         "fieldMap" : {
-			"field" : "alias"
+			"szgk" : "Személygépkocsi",
+            "tgk" : "Tehergépkocsi",
+            "busz" : "Busz",
+            "mot" : "Motor",
+            "von" : "Vontató"
 			}
         },
     "pieSettings" : {
-		"title" : "",
-		"colors" : [""],
+		"title" : "Személyglpjátművek megoszlása üzemanyagtípusonként",
+		"colors" : ["#BFC46B","#85ACCE","#914441", "#444444"],
+		"dataPrecision":0,
+		"dataUnit": "db",
         "fieldMap" : {
-			"field" : "alias"
+			"szgk_ben" : "benzines",
+            "szgk_diz" : "dízel",
+            "szgk_egy" : "egyéb"
 			}
 		},
     "radarSettings" : {
 		"title" : "",
 		"colors" : [""],
-		"dataPrecision" : 1,
+		"dataPrecision" : 0,
+		"dataUnit": "",
         "fieldMap" : {
             "field" : "alias"
 			}
