--- a/config.json
+++ b/config.json
@@ -181,5 +181,5 @@
 			}	
 		}
     },
-"creators" : "Készítők: Lellei László (Lechner Tudásközpont), Ónodi Zsolt (Lechner Tudásközpont)"
+"creators" : "Creators of the Dash-Map-Board project: László Lellei (Lechner Knowledge Center), Zsolt Ónodi (Lechner Knowledge Center)"
 }
