--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "ymin" : Please give the southernmost coordinate (as a number) of the initial extent!,
     "xmax" : Please give the easternmost coordinate (as a number) of the initial extent!,
     "ymax" : Please give the northernmost coordinate (as a number) of the initial extent!,
+    "basemap" : Please give the keyword (as a string) of the ESRI basemap! (Valid values: 'streets' , 'satellite' , 'hybrid', 'topo', 'gray', 'dark-gray', 'oceans', 'national-geographic', 'terrain', 'osm', 'dark-gray-vector', 'gray-vector', 'streets-vector', 'streets-night-vector', 'streets-relief-vector', 'streets-navigation-vector', 'topo-vector')
 	"timeStops" : ["Please give array of timestops as strings!"],
 	"timeSliderMovingRate" : Please give a number!,
     "dataServiceURL" : "Please give the URL of the time-aware Map Service as a string!",
@@ -91,7 +92,7 @@
 			}	
 		}
     },
-"theme1" : {
+"theme2" : {
 	"layout" : {
 		"leftPanelWidthPercent" : Please give a number!,
 		"mapHeightPercent" : Please give a number!,
@@ -109,6 +110,7 @@
     "ymin" : Please give the southernmost coordinate (as a number) of the initial extent!,
     "xmax" : Please give the easternmost coordinate (as a number) of the initial extent!,
     "ymax" : Please give the northernmost coordinate (as a number) of the initial extent!,
+    "basemap" : Please give the keyword (as a string) of the ESRI basemap! (Valid values: 'streets' , 'satellite' , 'hybrid', 'topo', 'gray', 'dark-gray', 'oceans', 'national-geographic', 'terrain', 'osm', 'dark-gray-vector', 'gray-vector', 'streets-vector', 'streets-night-vector', 'streets-relief-vector', 'streets-navigation-vector', 'topo-vector')
 	"timeStops" : ["Please give array of timestops as strings!"],
 	"timeSliderMovingRate" : Please give a number!,
     "dataServiceURL" : "Please give the URL of the time-aware Map Service as a string!",
@@ -116,7 +118,7 @@
 	"dataServiceLayerPosition" : Please give a number!,
     "additionalLayerURLs" : ["Please give array of Map Service URLs as strings!"],
 	"areaNameField" : "Please give the fieldname (as a string) that contains the name of map objects!",
-    "timeField" : "Please give the fieldname (as a string) that contains the time information!",    
+    "timeField" : "Please give the fieldname (as a string) that contains the time information!",
     "chartPositions" : {
         "LL" : "Please give the codename of the chart type as a string!",
         "UR" : "Please give the codename of the chart type as a string!", 
